# realesrgan-mobile

./: .gitignore  LICENSE  README.md
android/executorch-app/ExecuTorchDemo/: README.md  settings.gradle.kts
android/executorch-app/ExecuTorchDemo/app/: build.gradle.kts
android/executorch-app/ExecuTorchDemo/app/src/main/: AndroidManifest.xml
android/executorch-app/ExecuTorchDemo/app/src/main/java/com/example/executorchdemo/: MainActivity.java
android/executorch-app/ExecuTorchDemo/app/src/main/res/layout/: activity_main.xml
android/executorch-app/ExecuTorchDemo/app/src/main/res/values/: strings.xml
android/executorch-app/ExecuTorchDemo/gradle/: libs.versions.toml
android/executorch-app/ExecuTorchDemo/gradle/wrapper/: gradle-wrapper.properties
android/ncnn-app/: README.md  settings.gradle.kts
android/ncnn-app/app/: build.gradle.kts
android/ncnn-app/app/src/androidTest/java/com/example/realesrganappncnn/: ExampleInstrumentedTest.java
android/ncnn-app/app/src/main/: AndroidManifest.xml
android/ncnn-app/app/src/main/assets/: realesr_general_x4v3.ncnn.param
android/ncnn-app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/ncnn-app/app/src/main/cpp/include/ncnn/: platform.h
android/ncnn-app/app/src/main/java/com/example/realesrganappncnn/: MainActivity.java
android/ncnn-app/app/src/main/res/layout/: activity_main.xml
android/ncnn-app/app/src/main/res/values/: strings.xml  themes.xml
android/ncnn-app/app/src/main/res/values-night/: themes.xml
android/ncnn-app/app/src/test/java/com/example/realesrganappncnn/: ExampleUnitTest.java
android/ncnn-app/gradle/: libs.versions.toml
android/ncnn-app/gradle/wrapper/: gradle-wrapper.properties
models/: README_MODELS.md
